--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,11 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+.DS_Store
+
+# macOS
+.DS_Store
+# local uploads & dumps
+server/uploads/
+*.sql
